# olinkb

./: .env.example  .gitignore  README.md  analisis-olinkb.md  analisis-v2-olinkb.md  implementation-plan-olinkb.md  olinkb-v2-arquitectura-c4.md  pyproject.toml
.copilot/skills/memory-relevance-triage/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docker/: docker-compose.yml  init.sql
docs/: CHANGELOG.md  DEVELOPER-GUIDE.md  analisis-olinkb.md  auditoria-objetiva-olinkb-2026-04-12.md  auditoria-tecnica-codigo-2026-04-14.md  brainstorming-visual-companion-replicacion.md  knowledge-base-ai-memory-systems.md  olinkb-arquitectura-c4.md  olinkb-funcionamiento-end-to-end.md  olinkb-mcp-operacion.md  test.md
docs/releases/: RELEASING.md  TEMPLATE.md  v0.1.0.md
docs/superpowers/plans/: 2026-04-12-managed-memory-viewer-implementation.md  2026-04-14-cli-first-packaging-and-transport-separation.md  2026-04-14-cli-memory-automation.md
olinkb-viewer/: README.md  cli-install-visual-companion.html  index.html  olinkb-end-to-end-visual-companion.html
scripts/: sync_package_versions.py
src/olinkb/: app.py  automation.py  bootstrap.py  cli.py  config.py  domain.py  mcp_transport.py  server.py  session.py  templates.py  tool_cli.py  tool_handlers.py  viewer.py  viewer_server.py
tests/: test_app.py  test_automation.py  test_cache.py  test_cli.py  test_config.py  test_domain.py  test_postgres.py  test_release_version_sync.py  test_server.py  test_session.py  test_templates.py  test_tool_cli.py  test_viewer.py  test_viewer_server.py
(+14 files in other folders)
